--- a/style/contact.css
+++ b/style/contact.css
@@ -156,27 +156,7 @@ form button {
     margin-top: 20px;
 }
 
-footer {
-    text-align: center;
-    margin: 0 3rem;
-    color: #585a5e;
-    background: #ffffff;
-    font-family: Lato-Regular;
-    font-size: 10px;
-    letter-spacing: 0.6px;
-}
-
-footer a {
-    color: #585a5e;
-    text-decoration: none;
-    margin: 1rem;
-}
-
-.fa {
-    font-size: 20px;
-}
-
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 1050px) {
     .mobile-display {
         display: none;
     }
