--- a/style/navigation.css
+++ b/style/navigation.css
@@ -11,6 +11,7 @@ nav {
     background: white;
     z-index: 999;
     font-family: 'Montserrat-Bold';
+    letter-spacing: 2px;
 }
 
 .nav-desktop {
@@ -205,7 +206,7 @@ nav {
 /* End: animation */
 
 /* Start: media query */
-@media only screen and (min-width:600px) {
+@media only screen and (min-width:700px) {
     .nav-mobile {
         display: none;
     }
